WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217979
Fix non-c-typedef-for-linkage warning in SocketStreamHandle
https://bugs.webkit.org/show_bug.cgi?id=217979
Summary
Fix non-c-typedef-for-linkage warning in SocketStreamHandle
Don Olmstead
Reported
2020-10-20 12:01:49 PDT
..\..\Source\WebCore\platform\network\SocketStreamHandle.h(42,15): warning: anonymous non-C-compatible type given name for linkage purposes by typedef declaration; add a tag name here [-Wnon-c-typedef-for-linkage] typedef struct { ^ SourceApplicationAuditToken ..\..\Source\WebCore\platform\network\SocketStreamHandle.h(46,17): note: type is not C-compatible due to this default member initializer void *empty { nullptr }; ^~~~~~~~~~~ ..\..\Source\WebCore\platform\network\SocketStreamHandle.h(48,3): note: type is given name 'SourceApplicationAuditToken' for linkage purposes by this typedef declaration } SourceApplicationAuditToken; ^ 1 warning generated.
Attachments
Patch
(1.56 KB, patch)
2020-10-20 12:33 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2020-10-20 12:33:48 PDT
Created
attachment 411898
[details]
Patch
EWS
Comment 2
2020-10-20 13:21:12 PDT
Committed
r268757
: <
https://trac.webkit.org/changeset/268757
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411898
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-20 13:22:18 PDT
<
rdar://problem/70498896
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug