Fix non-c-typedef-for-linkage warning in SocketStreamHandle https://bugs.webkit.org/show_bug.cgi?id=217979

Reviewed by Alex Christensen.

The warning was because the anonymous type was not C-compatible due to a default member
initializer, so remove the typedef and name the struct.

No new tests. No change in behavior.

* platform/network/SocketStreamHandle.h:


Canonical link: https://commits.webkit.org/230700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268757 268f45cc-cd09-0410-ab3c-d52691b4dbfc